fix backup timeout
